--- a/apimonedas/src/main/resources/application.properties
+++ b/apimonedas/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=apimonedas
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/monedas
+spring.datasource.username=postgres
+spring.datasource.password=a1234
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
